Wed Oct 13 15:46:25 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/Makefile.am src/dblib/unittests/Makefile.am:
	* src/odbc/unittests/Makefile.am src/tds/unittests/Makefile.am:
	- say to libtool that we are not going to install tests

Wed Oct 13 14:55:10 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/ctlib/ct.c src/tds/mem.c:
	* src/tds/query.c src/tds/token.c:
	- rename TDS_CURSOR -> TDSCURSOR, mycursor -> cursor

Wed Oct 13 13:03:03 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/ctlib.h include/tds.h src/ctlib/blk.c:
	* src/ctlib/cs.c src/ctlib/ct.c src/ctlib/unittests/blk_out.c:
	* src/dblib/dblib.c src/odbc/odbc_util.c src/tds/mem.c:
	* src/tds/query.c src/tds/token.c src/tds/example/token2.c:
	* src/tds/unittests/dataread.c src/tds/unittests/flags.c:
	* src/tds/unittests/utf8_1.c src/tds/unittests/utf8_2.c:
	- applied Bill Thompson patch for cursors
	 - renamed curr_resinfo to current_results
	 - allow multiple cursors to co-exist

Wed Oct 06 11:33:23 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/sybdb.h win32/config.h:
	- some minor fix for win32

Thu Sep 23 13:24:09 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/data.c:
	- convert data using input parameters

Thu Sep 23 13:08:32 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/odbc_util.c:
	- fix mimor portability issues

Mon Sep 20 10:19:28 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/ctlib/blk.c src/ctlib/cs.c src/ctlib/ct.c:
	* src/dblib/bcp.c src/dblib/dblib.c src/odbc/descriptor.c:
	* src/odbc/error.c src/odbc/odbc_util.c src/tds/config.c:
	* src/tds/iconv.c src/tds/mem.c src/tds/read.c src/tds/token.c:
	* src/tds/util.c:
	- fix a possible bug in TDS_ZERO_FREE macro and reuse it
	- minor changes

Thu Sep 15 13:41:10 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/iconv.c src/tds/token.c: