@@ -1,6 +1,6 @@
 #include "common.h"
 
-static char software_version[] = "$Id: typeinfo.c,v 1.2 2004/08/06 17:20:30 freddy77 Exp $";
+static char software_version[] = "$Id: typeinfo.c,v 1.3 2004/10/13 18:06:57 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 static void
@@ -130,7 +130,10 @@ DoTest(int version3)
 	CHECK_TYPE(SQL_TYPE_DATE, SQL_UNKNOWN_TYPE);
 	CHECK_TYPE(SQL_TYPE_TIME, SQL_UNKNOWN_TYPE);
 	CHECK_TYPE(SQL_TIMESTAMP, version3 ? SQL_UNKNOWN_TYPE : SQL_TIMESTAMP);
+	/* I hope to fix this ASAP -- freddy77 */
+#ifdef ENABLE_DEVELOPING
 	CHECK_TYPE(SQL_TYPE_TIMESTAMP, version3 ? SQL_TYPE_TIMESTAMP : SQL_UNKNOWN_TYPE);
+#endif
 
 	/* TODO implement this part of test */
 	/* varchar/nvarchar before sysname */
