@@ -41,7 +41,7 @@
 
 #include <assert.h>
 
-static char software_version[] = "$Id: query.c,v 1.141 2004/10/13 12:57:05 freddy77 Exp $";
+static char software_version[] = "$Id: query.c,v 1.142 2004/10/13 18:06:58 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 static void tds_put_params(TDSSOCKET * tds, TDSPARAMINFO * info, int flags);
@@ -1125,8 +1125,7 @@ tds_put_data(TDSSOCKET * tds, TDSCOLUMN * curcol, unsigned char *current_row, in
 			num = (TDS_NUMERIC *) src;
 			memcpy(&buf, num, sizeof(buf));
 			tdsdump_log(TDS_DBG_INFO1, "swapping numeric data...\n");
-			/* TODO tds_get_conversion_type needed?? */
-			tds_swap_datatype(tds_get_conversion_type(curcol->column_type, colsize), (unsigned char *) &buf);
+			tds_swap_datatype(curcol->column_type, (unsigned char *) &buf);
 			num = &buf;
 			tds_put_n(tds, num->array, colsize);
 		} else if (blob) {
